# BlackHoleRayTracer

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp  readme.md
.github/workflows/: cmake-multi-platform.yml
glad/include/glad/: glad.h
glad/src/: glad.c
include/: cameraBase.h  computeShader.h  freeCamera.h  imguiWidget.h  orbitCamera.h  render.h  shader.h  texture.h
shader/: basic.frag  blackhole.comp  blackhole.frag  blackhole.vert  blur.frag  framebuffer.frag  framebuffer.vert  light.frag  screen.frag  screen.vert
src/: imguiWidget.cpp  render.cpp  shader.cpp  texture.cpp
